fixed head/footer alignment

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -53,7 +53,7 @@ body{
     float:left;
     padding:5px 10px 5px 10px;
     top: 0.6%;
-    right: -27%;
+    right: -26.5%;
     border-right-width: 1px;
     border-right-style: solid;
     border-right-color:#cccccc
@@ -63,7 +63,7 @@ body{
     float:left;
     padding:5px 10px 5px 10px;
     top: 0.6%;
-    right: -14%;
+    right: -15%;
     border-right-width: 1px;
     border-right-style: solid;
     border-right-color:#cccccc
@@ -200,7 +200,7 @@ h1{
     border-top-width: 0.5em;
     border-top-style: solid;
     border-top-color:#4aaaa5;
-    min-height: 10%;
+    min-height: 8%;
     position:absolute;
     text-align: center;
 }
